--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = nucleo_f303k8
 framework = stm32cube
 board_build.stm32cube.custom_config_header = yes
 upload_protocol = mbed
-build_flags = -Wl,-u_printf_float
+build_flags = -Wl,-u_printf_float -DPRINTF_FLOAT_ENABLE
 
 [platformio]
 include_dir = Inc
